# lmp-im

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  lmp-im.spec.in  lpim.spec.in  xinput_d_lmp
data/: Makefile.am  lmp  lmp-table.db  lmpim-test-gtk2.desktop  lmpim-test.desktop  pinyin-2.txt  pinyin.txt  symbol.txt  wubi.db  wubi.txt
doc/: symbols.txt
doc/htdocs/: Makefile.am
gtk2/: Makefile.am
po/: ChangeLog  wenju.pot  zh_CN.gmo  zh_CN.po
src/: Makefile.am  lmp-im-config  lmp-im-db.c  lmp-im-db.h  lmp-im-object.c  lmp-im-object.h  lmp-im-window.c  lmp-im-window.h  lmp-im.c  lmpim-test.c  pinyin-table.c  readfile.c  symbol-table.c  test-im.c  test-view.c  type.h  wubi-table.c
